# UPLAB-INTERNO

./: .env.example  .gitignore  README.md  apis.txt  package-lock.json  package.json  svelte.config.js  vite.config.ts  webhook.txt
.claude/skills/run-interno-uplab/: SKILL.md  driver.mjs  shot-atend.mjs  shot-atendimento.mjs  shot-conversa.mjs  shot-dashboard.mjs  shot-login-launcher.mjs  shot-metricas.mjs  shot-permissoes.mjs  shots.mjs  verify-admin.mjs
.github/workflows/: release.yml
scripts/: importar-conversas.mjs  setup-admin.mjs  sync-erp.mjs
scripts/db/: run-sql.mjs  schema-anexos.sql  schema-app.sql  schema-atend-config.sql  schema-atendimento-rpc.sql  schema-chat-interno.sql  schema-chat.sql  schema-ignorados.sql  schema-presenca.sql  schema-tickets-topicos.sql  schema-tickets.sql
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: auth.rs  db.rs  error.rs  logging.rs  mod.rs  models.rs  permissions.rs  repository.rs  state.rs
src-tauri/src/modules/: administrador.rs  financeiro.rs  mod.rs
src/lib/core/: auth.svelte.ts  modules-config.ts  modules.ts  painel.ts  presence.svelte.ts  registry.ts  screens.ts  storage.ts  supabase.ts  updater.ts  windows.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
supabase/: config.toml  schema.sql
supabase/functions/admin-create-user/: index.ts
supabase/functions/webhook-zap/: index.ts
supabase/functions/zap-conversa/: index.ts
(+24 files in other folders)
